--- a/springboot-rest-api-sample/src/main/resources/application.properties
+++ b/springboot-rest-api-sample/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
+
+server.servlet.context-path=/springboot-restapi
+
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
 
 
 #Spring Boot server configuration
